--- a/web/tabs_app/index.html
+++ b/web/tabs_app/index.html
@@ -3,8 +3,10 @@
 <head>
 	<title></title>
 	<script data-main="scripts/main.js" src="vendor/require.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
-
+	<div id="tabs-container"></div>
+	<div id="tab-content"></div>
 </body>
 </html>
